# Projects

./: README.md
AIFinal/: README.txt  locations_main.csv
AIProj/: PA4.py  README.txt  attractions_main.tsv  edges_main.csv
C++/: Queens.cpp  Queens.h  QueensDriver.cpp
C++/Project10/: CMakeLists.txt  Repair.cpp  Repair.h  RepairDriver.cpp  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h
C++/Project9/: CMakeLists.txt  Project9.cpp  Trie.cpp  Trie.h  TrieNode.cpp  TrieNode.h  testsubject.txt
C++/project0/: CMakeLists.txt  CalTest.cpp  Calendar.h  Date.h
C++/project1/: CalTest.cpp  Calendar.cpp  Calendar.h  README.txt  Reminder.cpp
C++/project2/: CMakeLists.txt  CalTest.cpp  Calendar.cpp  Calendar.h  Date.cpp  Project 2 README.txt  Reminder.h
C++/project3/: CMakeLists.txt  CalTest.cpp  Calendar.cpp  Calendar.h  RemNode.h
C++/project4/: CMakeLists.txt  lab04-driver.cpp  (+2 more)
Matlab Files/: Plotsin.m  Solar_time.m  divide.m  eligible.m  gernerationxyz.m  get_cost.m  giga.m  highest_rated.m  hw1.p  hw1_problem1.m  hw1_problem2.m  hw1_problem3.m  hw1_problem4.m  hw1_problem5.m  hw1_problem6.m  in_celsius.m  larger.m  largershort.m  max_min.m  monthly_interest.m  my_eye.m  myrandi.m  oldest_director.m  pop_change.m  psquare.m  quadrants.m  randi_col.m
Python files/: 6.py  Final Project.py  PA 4a.py  PA 4b.py  PA 7.py  PA 7B.py  PA 8A.py  PA 8B.py  PA 9A.py  PA 9B.py  PA10.py  file1.txt  file2.txt  file3.txt  file4.txt  file5.txt
Sudoku_Racket_PL/: main.rkt  project2.rkt
Sudoku_Rust/: main.rs  project4.md  test.rs
VUSAT_Programming-master (Satellite)/: camera.py
(+132 files in other folders)
